--- a/Website/DGH.html
+++ b/Website/DGH.html
@@ -2,14 +2,14 @@
 
 <html>
   <head>
-    <title>BazzyMuffin - Demi God Heroes</title>
+    <title>HMS Bennett - Demi God Heroes</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
     <script src="JavaScript/Main.js"></script>
   </head>
 
   <body onload="OnLoad()">
     <h2 class="title">
-      BazzyMuffin Productions - Demi God Heroes
+      Demi God Heroes
     </h2>
     <h3>
       <ul class="menu">
