--- a/Website/Index.html
+++ b/Website/Index.html
@@ -2,14 +2,14 @@
 
 <html>
   <head>
-    <title>BazzyMuffin</title>
+    <title>HMS Bennett</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
     <script src="JavaScript/Main.js"></script>
   </head>
 
   <body onload="OnLoad()">
     <h2 class="title">
-      BazzyMuffin Productions
+      Harrison Bennett's Portfolio
     </h2>
     <h3>
       <ul class="menu">
