--- a/Website/MD.html
+++ b/Website/MD.html
@@ -2,14 +2,14 @@
 
 <html>
   <head>
-    <title>BazzyMuffin - Girlfriend Meal Decider</title>
+    <title>HMS Bennett - Girlfriend Meal Decider</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
     <script src="JavaScript/Main.js"></script>
   </head>
 
   <body onload="OnLoad()">
     <h2 class="title">
-      BazzyMuffin Productions - Girlfriend Meal Decider
+      Girlfriend Meal Decider
     </h2>
     <h3>
       <ul class="menu">
