--- a/Website/SLC.html
+++ b/Website/SLC.html
@@ -2,14 +2,14 @@
 
 <html>
   <head>
-    <title>BazzyMuffin - Student Loan Repayment Calculator</title>
+    <title>HMS Bennett - Student Loan Repayment Calculator</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
     <script src="JavaScript/Main.js"></script>
   </head>
 
   <body onload="OnLoad()">
     <h2 class="title">
-      BazzyMuffin Productions - Student Loan Repayment Calculator
+      Student Loan Repayment Calculator
     </h2>
     <h3>
       <ul class="menu">
