--- a/Website/TBA.html
+++ b/Website/TBA.html
@@ -2,14 +2,14 @@
 
 <html>
   <head>
-    <title>BazzyMuffin - Text Based Adventure</title>
+    <title>HMS Bennett - Text Based Adventure</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
     <script src="JavaScript/Main.js"></script>
   </head>
 
   <body onload="OnLoad()">
     <h2 class="title">
-      BazzyMuffin Productions - The Awakening
+      The Awakening
     </h2>
     <h3>
       <ul class="menu">
@@ -51,10 +51,6 @@
       <right>
         <p>
         <a href="TheAwakening.html">Press me to play The Awakening</a></br></br>
-          <u>Artwork for The Awakening.</u>
-          <img src="images/watch.png" width="50%" height"50%"></br>
-          <img src="images/engineoff.png" width="50%" height"50%"></br>
-          <img src="images/topsecret.png" width="50%" height"50%"></br>
         </p>
        </right>
     </div>
