--- a/Website/TheAwakening.html
+++ b/Website/TheAwakening.html
@@ -2,14 +2,14 @@
 
 <html>
   <head>
-    <title>BazzyMuffin - The Awakening</title>
+    <title>HMS Bennett - The Awakening</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
     <script src="JavaScript/UploadedJava.js"></script>
   </head>
 
   <body onload="On_Load()">
     <h2 class="title">
-      A BazzyMuffin Text Adventure
+      Text Adventure
     </h2>
     <h3>
       <ul class="menu">
