--- a/Website/USM.html
+++ b/Website/USM.html
@@ -2,14 +2,14 @@
 
 <html>
   <head>
-    <title>BazzyMuffin - University Stage Management Application</title>
+    <title>HMS Bennett - University Stage Management Application</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
     <script src="JavaScript/Main.js"></script>
   </head>
 
   <body onload="OnLoad()">
     <h2 class="title">
-      BazzyMuffin Productions - University Stage Management Application
+      University Stage Management Application
     </h2>
     <h3>
       <ul class="menu">
