--- a/Website/ContactPage.html
+++ b/Website/ContactPage.html
@@ -2,14 +2,14 @@
 
 <html>
   <head>
-    <title>BazzyMuffin - Contact</title>
+    <title>HMS Bennett - Contact</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
     <script src="JavaScript/Main.js"></script>
   </head>
 
   <body onload="OnLoad()">
     <h2 class="title">
-      BazzyMuffin Productions - Contact
+      Contact
     </h2>
     <h3>
       <ul class="menu">
