--- a/Website/GAW.html
+++ b/Website/GAW.html
@@ -2,14 +2,14 @@
 
 <html>
   <head>
-    <title>BazzyMuffin - Gods At War</title>
+    <title>HMS Bennett - Gods At War</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
     <script src="JavaScript/Main.js"></script>
   </head>
 
   <body onload="OnLoad()">
     <h2 class="title">
-      BazzyMuffin Productions - Gods At War
+      Gods At War
     </h2>
     <h3>
       <ul class="menu">
