--- a/Website/SF.html
+++ b/Website/SF.html
@@ -2,14 +2,14 @@
 
 <html>
   <head>
-    <title>BazzyMuffin - Seneschal's Fortress</title>
+    <title>HMS Bennett - Seneschal's Fortress</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
     <script src="JavaScript/Main.js"></script>
   </head>
 
   <body onload="OnLoad()">
     <h2 class="title">
-      BazzyMuffin Productions - Seneschal's Fortress
+      Seneschal's Fortress
     </h2>
     <h3>
       <ul class="menu">
