Updated Contact Page

--- a/Website/ContactPage.html
+++ b/Website/ContactPage.html
@@ -42,13 +42,11 @@
     </div>
     <div class="mainTextAlt">
       <p>
-        Email me at <a href="mailto:bazzymuffin@gmail.com">bazzymuffin@gmail.com</a></br></br>
-        LinkedIn: <a href="https://www.linkedin.com/in/harrison-bennett-0587aa12a/">Harrison Bennett</a></br></br>
-        Itch.io: <a href="https://bazzymuffin.itch.io/">BazzyMuffin</a></br></br>
-        YouTube: <a href="https://www.youtube.com/channel/UCkgr9pYAZeRF0J74Zo3vjUQ">BazzyMuffin</a></br></br>
-        Twitter: <a href="https://twitter.com/BazzyMuffin">BazzyMuffin</a></br></br>
-        Facebook: <a href="https://www.facebook.com/BazzyMuffin/">BazzyMuffin</a></br></br>
-        Twitch: <a href="https://www.twitch.tv/bazzymuffin">BazzyMuffin</a>
+        Email me at <a href="mailto:harrisonsbennett@gmail.com">harrisonsbennett@gmail.com</a></br></br>
+        <a href="https://www.linkedin.com/in/harrison-bennett-0587aa12a/">LinkedIn</a></br></br>
+        <a href="https://hms-bennett.itch.io/">Itch.io</a></br></br>
+        <a href="https://www.youtube.com/channel/UC2DllcU0PIkPsRJXwnQqQKQ">YouTube</a></br></br>
+        <a href="https://twitter.com/HMSBennett">Twitter</a></br></br>
       </p>
     </div>
     <div class="rightMenu">
