Added to about page

--- a/Website/AboutPage.html
+++ b/Website/AboutPage.html
@@ -43,7 +43,9 @@
     <div class="mainText">
       <p>
         My name is Harrison Bennett.</br></br>
-        I am a 21 year old Computing with Games Development student at The University Of Plymouth.
+        I am a 21 year old Computing with Games Development student at The University Of Plymouth.</br>
+        I enjoy archery, and have been a member of Plymouth Archery Society since September 2015.</br>
+        I am fascinated by Greek Mythology so tend to base games on it.</br>
       </p>
     </div>
     <div class="rightMenu">
