Added Dev Log and Hover Racer

--- a/Website/DevLog.html
+++ b/Website/DevLog.html
@@ -2,14 +2,14 @@
 
 <html>
   <head>
-    <title>HMS Bennett - University Stage Management Application</title>
+    <title>HMS Bennett - Dev Log</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
     <script src="JavaScript/Main.js"></script>
   </head>
 
   <body onload="OnLoad()">
     <h2 class="title">
-      University Stage Management Application
+      Developers Log
     </h2>
     <h3>
       <ul class="menu">
@@ -43,19 +43,10 @@
 
     </div>
     <div class="mainText">
-      <left>
-        <p>
-          This app was developed as a referal assignment, the object is to allow students to keep track of their grades and tell them their overall grade for the year
-          The next features to be added will be the ability to have every year recorded, not just individual stages.
-        </p>
-      </left>
-      <right>
-        <p>
-          <a href="Files/StageManagement1.1.exe" download>Press Me To Download EXE File</a></br></br></br>
-          <u>App Screen Shots</u></br></br>
-          <img src="images/USMOne.png" width="100%" height"100%">
-        </p>
-       </right>
+      <p>
+        Hover Racer has been updated to have partical effects, this adds a nice visual element, so the vehicle isn't
+        just floating, but instead looks like its been propelled up. - 30/10/17
+      </p>
     </div>
     <div class="rightMenu">
       <div id="Test"></div>
