--- a/Website/GamePage.html
+++ b/Website/GamePage.html
@@ -31,9 +31,11 @@
               <li><a href="SF.html">Seneschal's Fortress</a></li>
               <li><a href="DGH.html">Demi God Heroes</a></li>
               <li><a href="RC.html">Richard City</a></li>
+              <li><a href="HR.html">Hover Racer</a></li>
             </ul>
         </li>
         <li><a href="ContactPage.html">Contact</a></li>
+        <li><a href="DevLog.html">Dev Log</a></li>
       </ul>
     </h3>
     <div class="clear"></div>
@@ -55,6 +57,7 @@
           <a href="GAW.html">Gods At War</a></br></br>
           <a href="DGH.html">Demi God Heroes</a></br></br>
           <a href="RC.html">Richard City</a></br></br>
+          <a href="HR.html">Hover Racer</a></br></br>
         </right>
       </p>
     </div>
