--- a/Website/HR.html
+++ b/Website/HR.html
@@ -2,14 +2,14 @@
 
 <html>
   <head>
-    <title>HMS Bennett - University Stage Management Application</title>
+    <title>HMS Bennett - Hover Racer</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
     <script src="JavaScript/Main.js"></script>
   </head>
 
   <body onload="OnLoad()">
     <h2 class="title">
-      University Stage Management Application
+      Hover Racer
     </h2>
     <h3>
       <ul class="menu">
@@ -45,15 +45,14 @@
     <div class="mainText">
       <left>
         <p>
-          This app was developed as a referal assignment, the object is to allow students to keep track of their grades and tell them their overall grade for the year
-          The next features to be added will be the ability to have every year recorded, not just individual stages.
+          This game is being created as part of my second year at university.</br>
+          The aim of this module is to build something surrounding a specific mechanic.</br>
+          For my mechanic, you can drive upside down, so the player has the ability to flip the car, and navigate the race track.</br>
         </p>
       </left>
       <right>
         <p>
-          <a href="Files/StageManagement1.1.exe" download>Press Me To Download EXE File</a></br></br></br>
-          <u>App Screen Shots</u></br></br>
-          <img src="images/USMOne.png" width="100%" height"100%">
+
         </p>
        </right>
     </div>
