--- a/Website/SLC.html
+++ b/Website/SLC.html
@@ -31,9 +31,11 @@
               <li><a href="SF.html">Seneschal's Fortress</a></li>
               <li><a href="DGH.html">Demi God Heroes</a></li>
               <li><a href="RC.html">Richard City</a></li>
+              <li><a href="HR.html">Hover Racer</a></li>
             </ul>
         </li>
         <li><a href="ContactPage.html">Contact</a></li>
+        <li><a href="DevLog.html">Dev Log</a></li>
       </ul>
     </h3>
     <div class="clear"></div>
