--- a/Website/DevLog.html
+++ b/Website/DevLog.html
@@ -42,10 +42,15 @@
     <div class="leftMenu">
 
     </div>
-    <div class="mainText">
+    <div class="mainTextAlt">
       <p>
+        Hover Racer and Gods At War now have itch pages. Gods At War with a Alpha.
+        Currently undergoing work towards Beta. Hover Racer shall soon have a playable demo.
+      </br><i>- 06/11/17</i>
+      </br></br>
         Hover Racer has been updated to have partical effects, this adds a nice visual element, so the vehicle isn't
-        just floating, but instead looks like its been propelled up. - 30/10/17
+        just floating, but instead looks like its been propelled up.
+      </br><i>- 30/10/17</i>
       </p>
     </div>
     <div class="rightMenu">
