--- a/Website/GAW.html
+++ b/Website/GAW.html
@@ -52,6 +52,8 @@
       </left>
       <right>
         <p>
+          Download Alpha at - <a href="https://hms-bennett.itch.io/gods-at-war">itch.io/gods-at-war</a>
+        </br></br>
           <u>Screenshots from Gods At War</u></br></br>
           Character Selection Screen</br>
           <img src="images/GAWCharacterSelection.png" width="75%" height"75%"></br>
