--- a/Website/HR.html
+++ b/Website/HR.html
@@ -52,7 +52,7 @@
       </left>
       <right>
         <p>
-
+          Download Alpha or Beta at - <a href="https://hms-bennett.itch.io/hover-racer">itch.io/hover-racer</a></br>
         </p>
        </right>
     </div>
