--- a/Website/SF.html
+++ b/Website/SF.html
@@ -46,12 +46,12 @@
       <left>
         <p>
           The 2D top down game was created as part of a University assignment during my first year.</br></br>
-          <a href="https://bazzymuffin.itch.io/seneschalsfortress">Itch.io Link</a></br>
-          <a href="https://trello.com/b/3HMbzSLp">Trello Link</a>
         </p>
       </left>
       <right>
         <p>
+        Download Alpha or Beta at - <a href="https://hms-bennett.itch.io/seneschalsfortress">itch.io/seneschals-fortress</a></br></br>
+        View Trello board at - <a href="https://trello.com/b/3HMbzSLp">trello.com/SF</a></br></br>
           <u>Trailer</u></br></br>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/OBPQpjSLSl8" frameborder="0" allowfullscreen></iframe></br>
         </p>
