--- a/Website/Index.html
+++ b/Website/Index.html
@@ -9,12 +9,11 @@
 
   <body onload="OnLoad()">
     <h2 class="title">
-      Harrison Bennett's Portfolio
+      <img src="images/Website.png" width="30%" height"30%">
     </h2>
     <h3>
       <ul class="menu">
         <li><a href="Index.html">Home</a></li>
-        <li><a href="AboutPage.html">About</a></li>
         <li>
           <a href="AppsPage.html">Applications</a>
             <ul>
@@ -34,7 +33,6 @@
               <li><a href="HR.html">Hover Racer</a></li>
             </ul>
         </li>
-        <li><a href="ContactPage.html">Contact</a></li>
         <li><a href="DevLog.html">Dev Log</a></li>
       </ul>
     </h3>
@@ -44,9 +42,18 @@
     </div>
     <div class="mainText">
       <p>
+        My name is Harrison Bennett.</br></br>
+        I am a 21 year old Computing with Games Development student at The University Of Plymouth.</br>
+        I enjoy archery, and have been a member of Plymouth Archery Society since September 2015.</br>
+        I am fascinated by Greek Mythology so tend to base games on it.</br></br>
         Click on games tab to see what is currently in the works, or play a working game.</br></br>
-        Or</br></br>
-        Click the applications tab to download an APK or EXE application.</br></br>
+        Click the applications tab to download an APK or EXE application.</br></br></br></br></br>
+
+        <a href="https://www.youtube.com/channel/UC2DllcU0PIkPsRJXwnQqQKQ/videos.com"><img src="images/YouTube.png" width="5%" height"5%"></a>
+        <a href="https://github.com/HMSBennett"><img src="images/Git.png" width="5%" height"5%"></a>
+        <a href="https://www.linkedin.com/in/harrison-bennett-0587aa12a/"><img src="images/LinkedIn.png" width="5%" height"5%"></a>
+        <a href="https://twitter.com/HMSBennett"><img src="images/Twitter.png" width="5%" height"5%"></a>
+        <a href="https://hms-bennett.itch.io/"><img src="images/Itch.png" width="15%" height"15%"></a>
       </p>
     </div>
     <div class="rightMenu">
