--- a/Website/DevLog.html
+++ b/Website/DevLog.html
@@ -9,12 +9,11 @@
 
   <body onload="OnLoad()">
     <h2 class="title">
-      Developers Log
+      <img src="images/Website.png" width="30%" height"30%">
     </h2>
     <h3>
       <ul class="menu">
         <li><a href="Index.html">Home</a></li>
-        <li><a href="AboutPage.html">About</a></li>
         <li>
           <a href="AppsPage.html">Applications</a>
             <ul>
@@ -34,7 +33,6 @@
               <li><a href="HR.html">Hover Racer</a></li>
             </ul>
         </li>
-        <li><a href="ContactPage.html">Contact</a></li>
         <li><a href="DevLog.html">Dev Log</a></li>
       </ul>
     </h3>
@@ -44,6 +42,10 @@
     </div>
     <div class="mainTextAlt">
       <p>
+        Hover Racer animations have been started, and the tutorial level has been finished.
+        Alpha should be ready within the month.
+      </br><i>- 14/11/17</i>
+      </br></br>
         Hover Racer and Gods At War now have itch pages. Gods At War with a Alpha.
         Currently undergoing work towards Beta. Hover Racer shall soon have a playable demo.
       </br><i>- 06/11/17</i>
