--- a/Website/Index.html
+++ b/Website/Index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body onload="OnLoad()">
+    <div class="content">
     <h2 class="title">
       <img src="images/Website.png" width="30%" height"30%">
     </h2>
@@ -49,15 +50,19 @@
         Click on games tab to see what is currently in the works, or play a working game.</br></br>
         Click the applications tab to download an APK or EXE application.</br></br></br></br></br>
 
-        <a href="https://www.youtube.com/channel/UC2DllcU0PIkPsRJXwnQqQKQ/videos.com"><img src="images/YouTube.png" width="5%" height"5%"></a>
-        <a href="https://github.com/HMSBennett"><img src="images/Git.png" width="5%" height"5%"></a>
-        <a href="https://www.linkedin.com/in/harrison-bennett-0587aa12a/"><img src="images/LinkedIn.png" width="5%" height"5%"></a>
-        <a href="https://twitter.com/HMSBennett"><img src="images/Twitter.png" width="5%" height"5%"></a>
-        <a href="https://hms-bennett.itch.io/"><img src="images/Itch.png" width="15%" height"15%"></a>
+
       </p>
     </div>
     <div class="rightMenu">
       <div id="Test"></div>
     </div>
+  </div>
+    <footer class="footer">
+      <a href="https://www.youtube.com/channel/UC2DllcU0PIkPsRJXwnQqQKQ/videos.com"><img src="images/YouTube.png" width="5%" height"5%"></a>
+      <a href="https://github.com/HMSBennett"><img src="images/Git.png" width="5%" height"5%"></a>
+      <a href="https://www.linkedin.com/in/harrison-bennett-0587aa12a/"><img src="images/LinkedIn.png" width="5%" height"5%"></a>
+      <a href="https://twitter.com/HMSBennett"><img src="images/Twitter.png" width="5%" height"5%"></a>
+      <a href="https://hms-bennett.itch.io/"><img src="images/Itch.png" width="15%" height"15%"></a>
+    </footer>
   </body>
 </html>
