--- a/Website/TheAwakening.html
+++ b/Website/TheAwakening.html
@@ -9,12 +9,11 @@
 
   <body onload="On_Load()">
     <h2 class="title">
-      Text Adventure
+      <img src="images/Website.png" width="30%" height"30%">
     </h2>
     <h3>
       <ul class="menu">
         <li><a href="Index.html">Home</a></li>
-        <li><a href="AboutPage.html">About</a></li>
         <li>
           <a href="AppsPage.html">Applications</a>
             <ul>
@@ -35,7 +34,6 @@
               <li><a href="HR.html">Hover Racer</a></li>
             </ul>
         </li>
-        <li><a href="ContactPage.html">Contact</a></li>
         <li><a href="DevLog.html">Dev Log</a></li>
       </ul>
     </h3>
