--- a/Website/DevLog.html
+++ b/Website/DevLog.html
@@ -4,6 +4,7 @@
   <head>
     <title>HMS Bennett - Dev Log</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
+    <link rel="icon" href="http://example.com/favicon.ico" type="image/x-icon" />
     <script src="JavaScript/Main.js"></script>
   </head>
 
