Overhaul on contact buttons

--- a/Website/Index.html
+++ b/Website/Index.html
@@ -10,7 +10,8 @@
   <body onload="OnLoad()">
     <div class="content">
     <h2 class="title">
-      <img src="images/Website.png" width="30%" height"30%">
+      <img src="images/Website.png" width="20%" height"20%"></br>
+      Home
     </h2>
     <h3>
       <ul class="menu">
@@ -44,11 +45,12 @@
     <div class="mainText">
       <p>
         My name is Harrison Bennett.</br></br>
-        I am a 21 year old Computing with Games Development student at The University Of Plymouth.</br>
+        Currently seeking industrial placement 2018/2019 in the Surrey/Hampshire area.</br></br></br>
+        I am a 21 year old Computing and Games Development student at The University Of Plymouth.</br>
         I enjoy archery, and have been a member of Plymouth Archery Society since September 2015.</br>
         I am fascinated by Greek Mythology so tend to base games on it.</br></br>
         Click on games tab to see what is currently in the works, or play a working game.</br></br>
-        Click the applications tab to download an APK or EXE application.</br></br></br></br></br>
+        Click the applications tab to download an APK or EXE application.</br></br>
 
 
       </p>
@@ -58,10 +60,10 @@
     </div>
   </div>
     <footer class="footer">
-      <a href="https://www.youtube.com/channel/UC2DllcU0PIkPsRJXwnQqQKQ/videos.com"><img src="images/YouTube.png" width="5%" height"5%">   </a>
-      <a href="https://github.com/HMSBennett"><img src="images/Git.png" width="5%" height"5%">   </a>
-      <a href="https://www.linkedin.com/in/harrison-bennett-0587aa12a/"><img src="images/LinkedIn.png" width="5%" height"5%">   </a>
-      <a href="https://twitter.com/HMSBennett"><img src="images/Twitter.png" width="5%" height"5%">   </a>
+      <a href="https://www.linkedin.com/in/harrison-bennett-0587aa12a/"><img src="images/LinkedIn.png" width="5%" height"5%"></a>
+      <a href="https://www.youtube.com/channel/UC2DllcU0PIkPsRJXwnQqQKQ/videos.com"><img src="images/YouTube.png" width="5%" height"5%"></a>
+      <a href="https://github.com/HMSBennett"><img src="images/Git.png" width="5%" height"5%"></a>
+      <a href="https://twitter.com/HMSBennett"><img src="images/Twitter.png" width="5%" height"5%"></a>
       <a href="https://hms-bennett.itch.io/"><img src="images/Itch.png" width="5%" height"5%"></a>
     </footer>
   </body>
