--- a/Website/DevLog.html
+++ b/Website/DevLog.html
@@ -10,7 +10,8 @@
 
   <body onload="OnLoad()">
     <h2 class="title">
-      <img src="images/Website.png" width="30%" height"30%">
+      <img src="images/Website.png" width="20%" height"20%"></br>
+      DevLog
     </h2>
     <h3>
       <ul class="menu">
