--- a/Website/SLC.html
+++ b/Website/SLC.html
@@ -9,7 +9,8 @@
 
   <body onload="OnLoad()">
     <h2 class="title">
-      <img src="images/Website.png" width="30%" height"30%">
+      <img src="images/Website.png" width="20%" height"20%"></br>
+      Student Loan Repayment Calculator
     </h2>
     <h3>
       <ul class="menu">
