--- a/Website/GAW.html
+++ b/Website/GAW.html
@@ -44,22 +44,17 @@
     <div class="mainText">
       <left>
         <p>
-          Gods At War was the first game i created with Unity, as part of my foundation year at University.</br></br>
+          Gods At War was the first game I created with Unity, as part of my foundation year at University.</br></br>
           You choose five Greek Gods and fight other teams of Gods. Each character has different moves and health.</br></br>
           The game is currently being refined to be more user friendly, showing each move, rather than being instantaneous.
         </p>
       </left>
       <right>
         <p>
-          Download Alpha at - <a href="https://hms-bennett.itch.io/gods-at-war">itch.io/gods-at-war</a>
+          Download Alpha at:</br>
+          <iframe width="552" frameborder="0" height="167" src="https://itch.io/embed/190462"></iframe>
         </br></br>
-          <u>Screenshots from Gods At War</u></br></br>
-          Character Selection Screen</br>
-          <img src="images/GAWCharacterSelection.png" width="75%" height"75%"></br>
-          Level Selection</br>
-          <img src="images/GAWLevels.png" width="75%" height"75%"></br>
-          Play Screen</br>
-          <img src="images/GAWPlayScreen.png" width="75%" height"75%"></br>
+          Trailer: Coming Soon</br>
         </p>
        </right>
     </div>
