--- a/Website/HR.html
+++ b/Website/HR.html
@@ -51,7 +51,10 @@
       </left>
       <right>
         <p>
-          Download Alpha or Beta at - <a href="https://hms-bennett.itch.io/hover-racer">itch.io/hover-racer</a></br>
+          Download Alpha at:</br>
+          <iframe width="552" frameborder="0" height="167" src="https://itch.io/embed/190449"></iframe>
+        </br></br>
+          Trailer: Coming Soon</br>
         </p>
        </right>
     </div>
