--- a/Website/SF.html
+++ b/Website/SF.html
@@ -44,15 +44,17 @@
     <div class="mainText">
       <left>
         <p>
-          The 2D top down game was created as part of a University assignment during my first year.</br></br>
+          My first attempt at a 2D top down game, created as part of a University assignment during my first year.</br></br>
+          You play as Varga a mercernary hired by Lord Drake to clear his fortress</br></br>
         </p>
       </left>
       <right>
         <p>
-        Download Alpha or Beta at - <a href="https://hms-bennett.itch.io/seneschalsfortress">itch.io/seneschals-fortress</a></br></br>
-        View Trello board at - <a href="https://trello.com/b/3HMbzSLp">trello.com/SF</a></br></br>
-          <u>Trailer</u></br></br>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/OBPQpjSLSl8" frameborder="0" allowfullscreen></iframe></br>
+        Download Alpha or Beta at:</br>
+        <iframe width="552" frameborder="0" height="167" src="https://itch.io/embed/142648"></iframe>
+      </br></br>
+          Trailer:</br>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/kTwvlA5ARfM" frameborder="0" allowfullscreen></iframe></br>
         </p>
        </right>
     </div>
