--- a/Website/DevLog.html
+++ b/Website/DevLog.html
@@ -43,20 +43,46 @@
 
     </div>
     <div class="mainTextAlt">
-      <p>
-        Hover Racer animations have been started, and the tutorial level has been finished.
-        Alpha should be ready within the month.
-      </br><i>- 14/11/17</i>
-      </br><hr>
-        Hover Racer and Gods At War now have itch pages. Gods At War with a Alpha.
-        Currently undergoing work towards Beta. Hover Racer shall soon have a playable demo.
-      </br><i>- 06/11/17</i>
-      </br><hr>
-        Hover Racer has been updated to have partical effects, this adds a nice visual element, so the vehicle isn't
-        just floating, but instead looks like its been propelled up.
-      </br><i>- 30/10/17</i>
-      </br><hr>
-      </p>
+      <devLog>
+        <span>
+          <iframe width="375" height="210" src="https://www.youtube.com/embed/YHpzM-T-Pa8" frameborder="0" gesture="media" allowfullscreen></iframe>
+        </span>
+        <span>
+          Hover Racer animations left and right animations are finished. Once the 180 flip is finished
+          an Alpha will be built and uploaded to Itch.
+          </br><i>- 21/11/17</i>
+        </span>
+      </devLog>
+      <devLog>
+        <span>
+          <iframe width="375" frameborder="0" height="210" src="https://itch.io/embed/190449"></iframe>
+        </span>
+        <span>
+          Hover Racer animations have been started, and the tutorial level has been finished.
+          Alpha should be ready within the month
+        </br><i>- 14/11/17</i>
+        </span>
+      </devLog>
+      <devLog>
+        <span>
+          <iframe width="375" height='210' frameborder="0" src="https://itch.io/embed/190462"></iframe>
+        </span>
+        <span>
+          Hover Racer and Gods At War now have itch pages. Gods At War with a Alpha.
+          Currently undergoing work towards Beta. Hover Racer shall soon have a playable demo.
+        </br><i>- 06/11/17</i>
+        </span>
+      </devLog>
+      <devLog>
+        <span>
+          <iframe width="375" height="210" src="https://www.youtube.com/embed/L6mbWEk9e0o" frameborder="0" allowfullscreen></iframe>
+        </span>
+        <span>
+          Hover Racer has been updated to have partical effects, this adds a nice visual element, so the vehicle isn't
+          just floating, but instead looks like its been propelled up.
+        </br><i>- 30/10/17</i>
+        </span>
+      </devLog>
     </div>
     <div class="rightMenu">
       <div id="Test"></div>
