--- a/Website/DevLog.html
+++ b/Website/DevLog.html
@@ -19,6 +19,7 @@
         <li>
           <a href="AppsPage.html">Applications</a>
             <ul>
+              <li><a href="NG.html">Primary School Numbers Game</a></li>
               <li><a href="MD.html">Girlfriend Meal Decider</a></li>
               <li><a href="SLC.html">Student Loan Repayment Calculator</a></li>
               <li><a href="USM.html">University Stage Management Application</a></li>
@@ -43,6 +44,15 @@
 
     </div>
     <div class="mainTextAlt">
+      <devLog>
+        <span>
+          <img src="images/NGScreenshot.png" width="375" height"210"></br>
+        </span>
+        <span>
+          Added Numbers Game from foundation year project to applications page.
+          </br><i>- 24/11/17</i>
+        </span>
+      </devLog>
       <devLog>
         <span>
           <iframe width="375" height="210" src="https://www.youtube.com/embed/YHpzM-T-Pa8" frameborder="0" gesture="media" allowfullscreen></iframe>
