--- a/Website/AppsPage.html
+++ b/Website/AppsPage.html
@@ -18,6 +18,7 @@
         <li>
           <a href="AppsPage.html">Applications</a>
             <ul>
+              <li><a href="NG.html">Primary School Numbers Game</a></li>
               <li><a href="MD.html">Girlfriend Meal Decider</a></li>
               <li><a href="SLC.html">Student Loan Repayment Calculator</a></li>
               <li><a href="USM.html">University Stage Management Application</a></li>
@@ -43,10 +44,11 @@
     </div>
     <div class="mainText">
       <p>
-        I have am making several applications. Some useful like a student loan calculator. Others more comical.</br>
+        I have made several applications. Some useful like a student loan calculator. Others more comical.</br>
         </br>
         <left>
           <u>Downloadable</u></br></br>
+          <a href="NG.html">Primary School Numbers Game</a></br></br>
           <a href="MD.html">Girlfriend Meal Decider</a></br></br>
           <a href="SLC.html">Student Loan Repayment Calculator.</a></br></br>
           <a href="USM.html">University Stage Management Application.</a></br>
