--- a/Website/SF.html
+++ b/Website/SF.html
@@ -18,6 +18,7 @@
         <li>
           <a href="AppsPage.html">Applications</a>
             <ul>
+              <li><a href="NG.html">Primary School Numbers Game</a></li>
               <li><a href="MD.html">Girlfriend Meal Decider</a></li>
               <li><a href="SLC.html">Student Loan Repayment Calculator</a></li>
               <li><a href="USM.html">University Stage Management Application</a></li>
