Removed DGH and RC
Decrease Scope

--- a/Website/GamePage.html
+++ b/Website/GamePage.html
@@ -30,8 +30,6 @@
               <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="GAW.html">Gods At War</a></li>
               <li><a href="SF.html">Seneschal's Fortress</a></li>
-              <li><a href="DGH.html">Demi God Heroes</a></li>
-              <li><a href="RC.html">Richard City</a></li>
               <li><a href="HR.html">Hover Racer</a></li>
             </ul>
         </li>
@@ -45,7 +43,7 @@
     <div class="mainText">
       <p>
         These are a collection of games created throughout my CGD course.
-        Some are works in progress and won't have playable demos.</br>
+        Some are works in progress and won't have playable demos.</br></br>
         Please click to find out more.</br>
         </br>
         <left>
@@ -56,8 +54,6 @@
         </left>
         <right>
           <u>Currently Unplayable</u></br></br>
-          <a href="DGH.html">Demi God Heroes</a></br></br>
-          <a href="RC.html">Richard City</a></br></br>
           <a href="HR.html">Hover Racer</a></br></br>
         </right>
       </p>
