--- a/Website/DevLog.html
+++ b/Website/DevLog.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
     <link rel="icon" href="http://example.com/favicon.ico" type="image/x-icon" />
     <script src="JavaScript/Main.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110520388-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-110520388-1');
+      </script>
   </head>
 
   <body onload="OnLoad()">
@@ -42,6 +50,26 @@
 
     </div>
     <div class="mainTextAlt">
+      <devLog>
+        <span>
+          <iframe width="375" frameborder="0" height="210" src="https://itch.io/embed/190449"></iframe>
+        </span>
+        <span>
+          Alpha released on Itch.io. Includes menu system, basic gameplay, track redesign, and soundtrack implementation. Beta should include
+          a more coherent gameplay system. As well as some world appropriate sound effects. 
+        </br><i>- 07/12/17</i>
+        </span>
+      </devLog>
+      <devLog>
+        <span>
+          <iframe width="375" height="210" src="https://www.youtube.com/embed/pkgpwc4lOzo" frameborder="0" gesture="media" allowfullscreen></iframe>
+        </span>
+        <span>
+          Latest update on Hover Racer game, currently experiencing issues with changing track as it affects velocity.
+          New look implemented as well as sounds from Jack Densly.
+        </br><i>- 04/12/17</i>
+        </span>
+      </devLog>
       <devLog>
         <span>
           <img src="images/NGScreenshot.png" width="375" height"210"></br>
