--- a/Website/Index.html
+++ b/Website/Index.html
@@ -5,6 +5,14 @@
     <title>HMS Bennett</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
     <script src="JavaScript/Main.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110520388-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-110520388-1');
+      </script>
   </head>
 
   <body onload="OnLoad()">
