Fixed all missing content

--- a/Website/DevLog.html
+++ b/Website/DevLog.html
@@ -31,15 +31,17 @@
               <li><a href="MD.html">Girlfriend Meal Decider</a></li>
               <li><a href="SLC.html">Student Loan Repayment Calculator</a></li>
               <li><a href="USM.html">University Stage Management Application</a></li>
+              <li><a href="RC.html">Room Control Application</a></li>
             </ul>
         </li>
         <li>
           <a href="GamePage.html">Games</a>
             <ul>
-              <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="GAW.html">Gods At War</a></li>
+              <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="SF.html">Seneschal's Fortress</a></li>
               <li><a href="HR.html">Hover Racer</a></li>
+              <li><a href="SA.html">Squire's Adventure</a></li>
             </ul>
         </li>
         <li><a href="DevLog.html">Dev Log</a></li>
@@ -52,11 +54,51 @@
     <div class="mainTextAlt">
       <devLog>
         <span>
+          <img src="images/AppsDevLog.png" width="375" height"210" frameborder="0"></br>
+        </span>
+        <span>
+          In preparation for upcoming modules I am in the process of updating my two phone applications.
+          Instead of being Unity files, they will instead be rebuilt with Android Studio.
+        </br><i>- 03/02/18</i>
+        </span>
+      </devLog>
+      <devLog>
+        <span>
+          <iframe width="375" frameborder="0" height="210" src="https://itch.io/embed/190449"></iframe>
+        </span>
+        <span>
+          Beta released for Hover Racer previously bug has been squashed. Gameplay has been refined to be more entertaining.
+          Still some asset and leadboard refining to go.
+        </br><i>- 15/01/18</i>
+        </span>
+      </devLog>
+      <devLog>
+        <span>
+          <iframe width="375" height="210" src="https://www.youtube.com/embed/BrnqCHnQmbc" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        </span>
+        <span>
+          Hover Racer now has spot effects, a working fuel system, a leader board, and blocks to dodge.
+          Has a bug that stops the player in their tracks, looking into this currently.
+        </br><i>- 20/12/17</i>
+        </span>
+      </devLog>
+      <devLog>
+        <span>
+          <iframe width="375" height="210" src="https://www.youtube.com/embed/nRDKfvnh28M" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        </span>
+        <span>
+          Hover Racer now has more audio effects, plus a more coherent gameplay. Still some sound effects to be added plus tweaks to
+          speed and a smooth follow camera.
+        </br><i>- 13/12/17</i>
+        </span>
+      </devLog>
+      <devLog>
+        <span>
           <iframe width="375" frameborder="0" height="210" src="https://itch.io/embed/190449"></iframe>
         </span>
         <span>
           Alpha released on Itch.io. Includes menu system, basic gameplay, track redesign, and soundtrack implementation. Beta should include
-          a more coherent gameplay system. As well as some world appropriate sound effects. 
+          a more coherent gameplay system. As well as some world appropriate sound effects.
         </br><i>- 07/12/17</i>
         </span>
       </devLog>
