--- a/Website/GAW.html
+++ b/Website/GAW.html
@@ -30,15 +30,17 @@
               <li><a href="MD.html">Girlfriend Meal Decider</a></li>
               <li><a href="SLC.html">Student Loan Repayment Calculator</a></li>
               <li><a href="USM.html">University Stage Management Application</a></li>
+              <li><a href="RC.html">Room Control Application</a></li>
             </ul>
         </li>
         <li>
           <a href="GamePage.html">Games</a>
             <ul>
-              <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="GAW.html">Gods At War</a></li>
+              <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="SF.html">Seneschal's Fortress</a></li>
               <li><a href="HR.html">Hover Racer</a></li>
+              <li><a href="SA.html">Squire's Adventure</a></li>
             </ul>
         </li>
         <li><a href="DevLog.html">Dev Log</a></li>
@@ -51,9 +53,15 @@
     <div class="mainText">
       <left>
         <p>
-          Gods At War was the first game I created with Unity, as part of my foundation year at University.</br></br>
+          Build Time : 100h</br>
+          Build Reason : University Foundation Project</br>
+          Start Date : February 2016</br>
+          Skills : Unity, C#</br>
+        </br>
+          <u>Description</u></br>
+          Gods At War was the first game I created with Unity, as part of my foundation year at University.
           You choose five Greek Gods and fight other teams of Gods. Each character has different moves and health.</br></br>
-          The game is currently being refined to be more user friendly, showing each move, rather than being instantaneous.
+          Beta in development.
         </p>
       </left>
       <right>
