--- a/Website/HR.html
+++ b/Website/HR.html
@@ -1,3 +1,21 @@
+GoDaddy
+Plesk Hosting
+Help
+Hello
+Websites & Domains
+Email
+Applications
+Files
+Statistics
+Account
+Premium Apps
+Help
+Show the File harrisonbennett.co.uk \ /httpdocs / HR.html
+View the original file in the following encoding:
+
+Warning: Any unsaved changes will be lost on reloading the file.
+
+
 <!DOCTYPE html>
 
 <html>
@@ -30,15 +48,17 @@
               <li><a href="MD.html">Girlfriend Meal Decider</a></li>
               <li><a href="SLC.html">Student Loan Repayment Calculator</a></li>
               <li><a href="USM.html">University Stage Management Application</a></li>
+              <li><a href="RC.html">Room Control Application</a></li>
             </ul>
         </li>
         <li>
           <a href="GamePage.html">Games</a>
             <ul>
-              <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="GAW.html">Gods At War</a></li>
+              <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="SF.html">Seneschal's Fortress</a></li>
               <li><a href="HR.html">Hover Racer</a></li>
+              <li><a href="SA.html">Squire's Adventure</a></li>
             </ul>
         </li>
         <li><a href="DevLog.html">Dev Log</a></li>
@@ -51,6 +71,12 @@
     <div class="mainText">
       <left>
         <p>
+          Build Time : 150h</br>
+          Build Reason : University Second Year Project</br>
+          Start Date : October 2017</br>
+          Skills : Unity, C#</br>
+        </br>
+          <u>Description</u></br>
           This game is being created as part of my second year at university.</br>
           The aim of this module is to build something surrounding a specific mechanic.</br>
           For my mechanic, you can drive upside down, so the player has the ability to flip the car, and navigate the race track.</br>
@@ -58,10 +84,13 @@
       </left>
       <right>
         <p>
-          Download Alpha at:</br>
+          Download Beta at:</br>
           <iframe width="552" frameborder="0" height="167" src="https://itch.io/embed/190449"></iframe>
         </br></br>
           Trailer: Coming Soon</br>
+        </br></br>
+          Developers Walkthrough:</br>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/hyd4AIRoCs8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </p>
        </right>
     </div>
@@ -70,3 +99,6 @@
     </div>
   </body>
 </html>
+
+   Submit
+Copyright © 1999 - 2015 GoDaddy Operating Company, LLC. All Rights Reserved.
