--- a/Website/TBA.html
+++ b/Website/TBA.html
@@ -30,15 +30,17 @@
               <li><a href="MD.html">Girlfriend Meal Decider</a></li>
               <li><a href="SLC.html">Student Loan Repayment Calculator</a></li>
               <li><a href="USM.html">University Stage Management Application</a></li>
+              <li><a href="RC.html">Room Control Application</a></li>
             </ul>
         </li>
         <li>
           <a href="GamePage.html">Games</a>
             <ul>
-              <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="GAW.html">Gods At War</a></li>
+              <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="SF.html">Seneschal's Fortress</a></li>
               <li><a href="HR.html">Hover Racer</a></li>
+              <li><a href="SA.html">Squire's Adventure</a></li>
             </ul>
         </li>
         <li><a href="DevLog.html">Dev Log</a></li>
@@ -51,9 +53,15 @@
     <div class="mainText">
       <left>
         <p>
-          This text adventure was created during my first year at University</br></br>
-          You must try to escape a spaceship you have been marooned on</br></br>
-          While playable this game still contains some bugs, please feel free to email me any bugs you may find and I shall endeavour to fix them.</br></br>
+          Build Time : 100h</br>
+          Build Reason : University First Year Project</br>
+          Start Date : October 2016</br>
+          Skills : HTML, Javascript</br>
+        </br>
+          <u>Description</u></br>
+          This text adventure was created during my first year at University.
+          You must try to escape a spaceship you have been marooned on.
+          Avoiding a serial killer in the process.
         </p>
       </left>
       <right>
