--- a/Website/MD.html
+++ b/Website/MD.html
@@ -30,15 +30,17 @@
               <li><a href="MD.html">Girlfriend Meal Decider</a></li>
               <li><a href="SLC.html">Student Loan Repayment Calculator</a></li>
               <li><a href="USM.html">University Stage Management Application</a></li>
+              <li><a href="RC.html">Room Control Application</a></li>
             </ul>
         </li>
         <li>
           <a href="GamePage.html">Games</a>
             <ul>
-              <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="GAW.html">Gods At War</a></li>
+              <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="SF.html">Seneschal's Fortress</a></li>
               <li><a href="HR.html">Hover Racer</a></li>
+              <li><a href="SA.html">Squire's Adventure</a></li>
             </ul>
         </li>
         <li><a href="DevLog.html">Dev Log</a></li>
@@ -51,16 +53,22 @@
     <div class="mainText">
       <left>
         <p>
-          This app was developed because sometimes you just can't decide where you want to get dinner.</br></br>
-          Should theoretically resize to your screen. Includes the ability to save your current selection, loading a preset however is not currently functioning. Rest button allows you to clear your current selection.</br></br>
+          Build Time : 8h</br>
+          Build Reason : Personal Use</br>
+          Start Date : February 2017</br>
+          Skills : Unity, C#</br>
+        </br>
+          <u>Description</u></br>
+          This app was developed because sometimes you just can't decide where you want to get dinner.
+          Should theoretically resize to your screen. Includes the ability to save your current selection, loading a preset
+          however is not currently functioning. Rest button allows you to clear your current selection.
         </p>
       </left>
       <right>
         <p>
-          <a href="Files/MD3.8.apk" download>Press Me To Download APK File</a></br></br></br>
-          <u>App Screen Shots</u></br></br>
-          <img src="images/MDOne.png" width="100%" height"100%">
-          <img src="images/MDTwo.png" width="100%" height"100%">
+          <a href="Files/MD3.8.apk" download><u>Download APK File</u></a></br></br>
+          App Screen Shots:</br>
+          <img src="images/MD.gif" width="100%" height"100%">
         </p>
        </right>
     </div>
