--- a/Website/NG.html
+++ b/Website/NG.html
@@ -31,15 +31,17 @@
               <li><a href="MD.html">Girlfriend Meal Decider</a></li>
               <li><a href="SLC.html">Student Loan Repayment Calculator</a></li>
               <li><a href="USM.html">University Stage Management Application</a></li>
+              <li><a href="RC.html">Room Control Application</a></li>
             </ul>
         </li>
         <li>
           <a href="GamePage.html">Games</a>
             <ul>
-              <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="GAW.html">Gods At War</a></li>
+              <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="SF.html">Seneschal's Fortress</a></li>
               <li><a href="HR.html">Hover Racer</a></li>
+              <li><a href="SA.html">Squire's Adventure</a></li>
             </ul>
         </li>
         <li><a href="DevLog.html">Dev Log</a></li>
@@ -50,20 +52,30 @@
 
     </div>
     <div class="mainText">
-      <p>
-        The Numbers Game is a simple HTML/Java application built to during my foundation year</br>
-        It exists to help teach children to recognise numbers in their word form.</br>
-      </p>
-      <input id="btnStart" value="Start" type="button" onclick="Start()"/>
-      <p id="lblNum"> </p></br>
-      <input id="txtAns" type="text" /></br></br>
-      <input id="btnCheck" type="button" value="Check" onclick="CheckAnswer()"/></br></br>
-      <p id="lblReply"> </p></br></br>
-        <img id="smileOne" src="images/Smiley1.png" height="75" width="75"/>
-        <img id="smileTwo" src="images/Smiley1.png" height="75" width="75"/>
-        <img id="smileThree" src="images/Smiley1.png" height="75" width="75"/>
-        <img id="smileFour" src="images/Smiley1.png" height="75" width="75"/>
-        <img id="smileFive" src="images/Smiley1.png" height="75" width="75"/>
+      <left>
+        <p>
+          Build Time : 50h</br>
+          Build Reason : University Foundation Project</br>
+          Start Date : October 2015</br>
+          Skills : HTML, Javascript</br>
+        </br>
+          <u>Description</u></br>
+          The Numbers Game is a simple HTML/Java application built to during my foundation year</br>
+          It exists to help teach children to recognise numbers in their word form.</br>
+        </p>
+      </left>
+      <right>
+        <input id="btnStart" value="Start" type="button" onclick="Start()"/>
+        <p id="lblNum"> </p>
+        <input id="txtAns" type="text" /></br></br>
+        <input id="btnCheck" type="button" value="Check" onclick="CheckAnswer()"/></br></br>
+        <p id="lblReply"> </p></br>
+          <img id="smileOne" src="images/Smiley1.png" height="75" width="75"/>
+          <img id="smileTwo" src="images/Smiley1.png" height="75" width="75"/>
+          <img id="smileThree" src="images/Smiley1.png" height="75" width="75"/>
+          <img id="smileFour" src="images/Smiley1.png" height="75" width="75"/>
+          <img id="smileFive" src="images/Smiley1.png" height="75" width="75"/>
+      </right>
     </div>
     <div class="rightMenu">
       <div id="Test"></div>
