--- a/Website/SF.html
+++ b/Website/SF.html
@@ -30,15 +30,17 @@
               <li><a href="MD.html">Girlfriend Meal Decider</a></li>
               <li><a href="SLC.html">Student Loan Repayment Calculator</a></li>
               <li><a href="USM.html">University Stage Management Application</a></li>
+              <li><a href="RC.html">Room Control Application</a></li>
             </ul>
         </li>
         <li>
           <a href="GamePage.html">Games</a>
             <ul>
-              <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="GAW.html">Gods At War</a></li>
+              <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="SF.html">Seneschal's Fortress</a></li>
               <li><a href="HR.html">Hover Racer</a></li>
+              <li><a href="SA.html">Squire's Adventure</a></li>
             </ul>
         </li>
         <li><a href="DevLog.html">Dev Log</a></li>
@@ -51,8 +53,14 @@
     <div class="mainText">
       <left>
         <p>
-          My first attempt at a 2D top down game, created as part of a University assignment during my first year.</br></br>
-          You play as Varga a mercernary hired by Lord Drake to clear his fortress</br></br>
+          Build Time : 150h</br>
+          Build Reason : University First Year Project</br>
+          Start Date : February 2017</br>
+          Skills : Unity, C#</br>
+        </br>
+          <u>Description</u></br>
+          My first attempt at a 2D top down game, created as part of a University assignment during my first year.
+          You play as Varga a mercernary hired by Lord Drake to clear his fortress. You are to fight through puzzles and clear rooms.
         </p>
       </left>
       <right>
