--- a/Website/SLC.html
+++ b/Website/SLC.html
@@ -30,15 +30,17 @@
               <li><a href="MD.html">Girlfriend Meal Decider</a></li>
               <li><a href="SLC.html">Student Loan Repayment Calculator</a></li>
               <li><a href="USM.html">University Stage Management Application</a></li>
+              <li><a href="RC.html">Room Control Application</a></li>
             </ul>
         </li>
         <li>
           <a href="GamePage.html">Games</a>
             <ul>
-              <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="GAW.html">Gods At War</a></li>
+              <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="SF.html">Seneschal's Fortress</a></li>
               <li><a href="HR.html">Hover Racer</a></li>
+              <li><a href="SA.html">Squire's Adventure</a></li>
             </ul>
         </li>
         <li><a href="DevLog.html">Dev Log</a></li>
@@ -51,16 +53,21 @@
     <div class="mainText">
       <left>
         <p>
-          This app was developed so you can figure out how much you shall have to repay based on how much you borrowed.</br></br>
-          It will also have a feature that tells you how many years until the loan is paid off.</br></br>
+          Build Time : 5h</br>
+          Build Reason : Personal Use</br>
+          Start Date : February 2017</br>
+          Skills : Unity, C#</br>
+        </br>
+          <u>Description</u></br>
+          This app was developed so you can figure out how much you shall have to repay based on how much you borrowed.</br>
+          It also has a feature that tells you how many years until the loan is paid off.
         </p>
       </left>
       <right>
         <p>
-          <a href="Files/SLC1.1.apk" download>Press Me To Download APK File</a></br></br></br>
-          <u>App Screen Shots</u></br></br>
-          <img src="images/SLCOne.png" width="100%" height"100%">
-          <img src="images/SLCTwo.png" width="100%" height"100%">
+          <a href="Files/SLC1.1.apk" download><u>Download APK File</u></a></br></br>
+          Application Demo:</br>
+          <img src="images/SLC.gif" width="100%" height="100%" controls="show">
         </p>
        </right>
     </div>
