--- a/Website/USM.html
+++ b/Website/USM.html
@@ -30,15 +30,17 @@
               <li><a href="MD.html">Girlfriend Meal Decider</a></li>
               <li><a href="SLC.html">Student Loan Repayment Calculator</a></li>
               <li><a href="USM.html">University Stage Management Application</a></li>
+              <li><a href="RC.html">Room Control Application</a></li>
             </ul>
         </li>
         <li>
           <a href="GamePage.html">Games</a>
             <ul>
-              <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="GAW.html">Gods At War</a></li>
+              <li><a href="TBA.html">The Awakening</a></li>
               <li><a href="SF.html">Seneschal's Fortress</a></li>
               <li><a href="HR.html">Hover Racer</a></li>
+              <li><a href="SA.html">Squire's Adventure</a></li>
             </ul>
         </li>
         <li><a href="DevLog.html">Dev Log</a></li>
@@ -51,14 +53,20 @@
     <div class="mainText">
       <left>
         <p>
-          This app was developed as a referal assignment, the object is to allow students to keep track of their grades and tell them their overall grade for the year
-          The next features to be added will be the ability to have every year recorded, not just individual stages.
+          Build Time : 100h</br>
+          Build Reason : University First Year Project</br>
+          Start Date : July 2017</br>
+          Skills : C#</br>
+        </br>
+          <u>Description</u></br>
+          This app was developed as a referal assignment, the object is to allow students to keep track of their grades and tell them their overall grade for the year.
+          The next feature to be added will allow the user to track every stage.
         </p>
       </left>
       <right>
         <p>
-          <a href="Files/StageManagement1.1.exe" download>Press Me To Download EXE File</a></br></br></br>
-          <u>App Screen Shots</u></br></br>
+          <a href="Files/StageManagement1.1.exe" download><u>Download EXE File</u></a></br></br>
+          App Screen Shot:</br>
           <img src="images/USMOne.png" width="100%" height"100%">
         </p>
        </right>
