--- a/Website/HR.html
+++ b/Website/HR.html
@@ -1,21 +1,3 @@
-GoDaddy
-Plesk Hosting
-Help
-Hello
-Websites & Domains
-Email
-Applications
-Files
-Statistics
-Account
-Premium Apps
-Help
-Show the File harrisonbennett.co.uk \ /httpdocs / HR.html
-View the original file in the following encoding:
-
-Warning: Any unsaved changes will be lost on reloading the file.
-
-
 <!DOCTYPE html>
 
 <html>
@@ -45,7 +27,7 @@ Warning: Any unsaved changes will be lost on reloading the file.
           <a href="AppsPage.html">Applications</a>
             <ul>
               <li><a href="NG.html">Primary School Numbers Game</a></li>
-              <li><a href="MD.html">Girlfriend Meal Decider</a></li>
+              <li><a href="MD.html">Meal Decider</a></li>
               <li><a href="SLC.html">Student Loan Repayment Calculator</a></li>
               <li><a href="USM.html">University Stage Management Application</a></li>
               <li><a href="RC.html">Room Control Application</a></li>
@@ -99,6 +81,3 @@ Warning: Any unsaved changes will be lost on reloading the file.
     </div>
   </body>
 </html>
-
-   Submit
-Copyright © 1999 - 2015 GoDaddy Operating Company, LLC. All Rights Reserved.
