--- a/Website/MD.html
+++ b/Website/MD.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>HMS Bennett - Girlfriend Meal Decider</title>
+    <title>HMS Bennett - Meal Decider</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
     <script src="JavaScript/Main.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -18,7 +18,7 @@
   <body onload="OnLoad()">
     <h2 class="title">
       <img src="images/Website.png" width="20%" height"20%"></br>
-      Girlfriend Meal Decider
+      Meal Decider
     </h2>
     <h3>
       <ul class="menu">
@@ -27,7 +27,7 @@
           <a href="AppsPage.html">Applications</a>
             <ul>
               <li><a href="NG.html">Primary School Numbers Game</a></li>
-              <li><a href="MD.html">Girlfriend Meal Decider</a></li>
+              <li><a href="MD.html">Meal Decider</a></li>
               <li><a href="SLC.html">Student Loan Repayment Calculator</a></li>
               <li><a href="USM.html">University Stage Management Application</a></li>
               <li><a href="RC.html">Room Control Application</a></li>
@@ -60,8 +60,8 @@
         </br>
           <u>Description</u></br>
           This app was developed because sometimes you just can't decide where you want to get dinner.
-          Should theoretically resize to your screen. Includes the ability to save your current selection, loading a preset
-          however is not currently functioning. Rest button allows you to clear your current selection.
+          Should theoretically resize to your screen. Includes the ability to save your current selection. Loading a preset
+          however is not currently functional. Rest button allows you to clear your current selection.
         </p>
       </left>
       <right>
